test_programs/ok/6.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
		display {
			diagonal: 10.00000001 inch,
			type: LED,
			resolution: Full-HD
		}
	},
	controller {
		colour: blue
	},
	controller {
		colour: black
	},
	game {
		name: Hedwig the Hedgehog
	}
}