test_programs/bad/6.concl
console_pack my_console_pack {
	console {
		storage: 1024 GB,
	},
	controller {
		colour: blue
	},
	controller {
		colour: black
	},
	game {
		name: Hedwig the Hedgehog
	}
}